Sun May 16 23:08:05 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-151*, tests/docs/bug-151.xml,
	  tests/general/Makefile.am, tests/docs/Makefile.am: added
	  regression test for old bug #127877

Sun May 16 20:48:35 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fixing bug #135542 about the DOCTYPE name
	  being generated when the root element is namespaced 
	* tests/general/bug-151*, tests/docs/bug-151.xml,
	  tests/general/Makefile.am, tests/docs/Makefile.am: added
	  regression test for bug #135542

Sun May 16 19:39:44 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c libxslt/namespaces.h libxslt/templates.c
	  libxslt/transform.c: fixing bug #134500 on namespace lookup for
	  attribute which sometimes lead to default namespace
	* tests/general/bug-150*, tests/docs/bug-150.xml,
	  tests/general/Makefile.am, tests/docs/Makefile.am: added
	  regression test for bug #134500

Sun May 16 18:09:36 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.h: fixing a small portability problem on Solaris
	  for the declaration of localtime_r bug #140468

Sun May 16 16:36:38 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt.m4: applied patch from Edward Rudd to fix the problems
	  raised in bug #142429
	  
Sun May 16 11:01:52 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: fixed a weird namespace bug #141532
	* tests/docs/Makefile.am tests/docs/bug-14[89].xml
	  tests/general/Makefile.am tests/docs/bug-14[89]*: added tests
	  to the regression for bug #141532

Sun May  2 23:47:43 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/imports.c: added comments and function header,
	  improved logic of routine just added.
	* tests/general/bug-147*, tests/docs/bug-147.xml,
	  tests/general/Makefile.am, tests/docs/Makefile.am: added
	  regression test for bug 141279

Sun May  2 12:47:32 PDT 2004 William Brack <wbrack@mmm.com.hk>
