@@ -6,11 +6,11 @@ dnl libexslt is an extension
 dnl
 LIBXSLT_MAJOR_VERSION=1
 LIBXSLT_MINOR_VERSION=1
-LIBXSLT_MICRO_VERSION=6
+LIBXSLT_MICRO_VERSION=7
 PACKAGE=libxslt
 LIBEXSLT_MAJOR_VERSION=0
 LIBEXSLT_MINOR_VERSION=8
-LIBEXSLT_MICRO_VERSION=4
+LIBEXSLT_MICRO_VERSION=5
 LIBXML_REQUIRED_VERSION=2.6.8
 
 
