@@ -23,21 +23,21 @@ extern "C" {
  *
  * the version string like "1.2.3"
  */
-#define LIBXSLT_DOTTED_VERSION "1.1.6"
+#define LIBXSLT_DOTTED_VERSION "1.1.7"
 
 /**
  * LIBXSLT_VERSION:
  *
  * the version number: 1.2.3 value is 1002003
  */
-#define LIBXSLT_VERSION 10106
+#define LIBXSLT_VERSION 10107
 
 /**
  * LIBXSLT_VERSION_STRING:
  *
  * the version number string, 1.2.3 value is "1002003"
  */
-#define LIBXSLT_VERSION_STRING "10106"
+#define LIBXSLT_VERSION_STRING "10107"
 
 /**
  * WITH_XSLT_DEBUG:
