@@ -1,3 +1,7 @@
+Mon May 17 06:14:09 CEST 2004 Daniel Veillard <daniel@veillard.com>
+
+	* configure.in: release of libxslt-1.1.7
+
 Sun May 16 23:08:05 CEST 2004 Daniel Veillard <daniel@veillard.com>
 
 	* tests/general/bug-151*, tests/docs/bug-151.xml,
